syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

message ToDo {
    int64 id = 1;
    string title = 2;
    string description = 3;

    google.protobuf.Timestamp reminder = 4;
}


message CreateRequest {
    string api = 1;
    ToDo toDo = 2;
}

message CreateResponse {
    string api = 1;
    int64 id = 2;
}

message ReadRequest {
    string api = 1;
    int64 id = 2;
}

message ReadResponse {
    string api = 1;
    ToDo toDo = 2;
}

message UpdateRequest {
    string api = 1;
    ToDo todo = 2;
}

message UpdateResponse {
    string api = 1;
    //contains number of entities have been updated
    int64 updated =2;
}


message DeleteRequest {
    string api = 1;
    int64 id = 2;
}

message DeleteResponse {
    string api = 1;
    // number of entites have been deleted
    int64 deleted = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;
    repeated ToDo toDos = 2;
}


service ToDoService {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
    rpc ReadAll(ReadAllRequest) returns (ReadAllResponse);
}

